--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -12,11 +12,25 @@
 }
 
 .card {
-  max-width: 600px;
+  max-width: 800px;
   border: 1px solid black;
+  display: flex;
+}
+.left-side {
+  flex: 1;
+  padding: 36px;
+}
+.right-side {
+  flex: 1;
 }
 
-.right-side {
+.right-side img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.stats {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
