--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -4,7 +4,35 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primaryNavy950: hsl(233, 47%, 7%);
+  --primaryBlue950: hsl(244, 37%, 16%);
+  --primaryPurple500: hsl(277, 64%, 61%);
+  --whiteTitles: hsl(0, 0%, 100%);
+  --whiteParagraph: hsla(0, 0%, 100%, 0.75);
+  --whiteStatsHeadings: hsla(0, 0%, 100%, 0.6);
+}
+
+body {
+  font-size: 15px;
+  font-family: "Inter", sans-serif;
+}
+
+h1,
+h2 {
+  color: var(--whiteTitles);
+}
+
+p {
+  color: var(--whiteParagraph);
+}
+
+span {
+  color: var(--primaryPurple500);
+}
+
 .container {
+  background-color: var(--primaryNavy950);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -13,12 +41,19 @@
 
 .card {
   max-width: 800px;
-  border: 1px solid black;
   display: flex;
+  background-color: var(--primaryBlue950);
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
 .left-side {
   flex: 1;
   padding: 36px;
+}
+
+.description {
+  margin-top: 16px;
+  margin-bottom: 32px;
 }
 .right-side {
   flex: 1;
@@ -28,6 +63,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
 
 .stats {
