--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend+Deca:wght@100..900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -43,31 +45,60 @@ span {
   max-width: 800px;
   display: flex;
   background-color: var(--primaryBlue950);
-  border-top-left-radius: 8px;
-  border-bottom-left-radius: 8px;
+  border-radius: 8px;
 }
 .left-side {
   flex: 1;
   padding: 36px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.title h1 {
+  font-size: 36px;
+  line-height: 1.2;
+  font-weight: 700;
 }
 
 .description {
-  margin-top: 16px;
-  margin-bottom: 32px;
+  margin-top: 24px;
+  margin-bottom: 64px;
+  line-height: 1.7;
+  font-size: 15px;
 }
 .right-side {
   flex: 1;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: var(--primaryPurple500);
 }
 
 .right-side img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+  display: block;
+  mix-blend-mode: multiply;
+  opacity: 0.75;
 }
 
 .stats {
   display: flex;
   justify-content: space-between;
+  gap: 60px;
+}
+
+.stats h2 {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.stats p {
+  text-transform: uppercase;
+  font-size: 12px;
+  letter-spacing: 1px;
+  color: var(--whiteStatsHeadings);
+  font-family: "Lexend Deca", sans-serif;
 }
